# ChGKCards

./: .gitignore  Blanks.tex  Notes.mdown  README.md  chgkblancs.cls  chgkcard.cls
cli/: cli.cabal  default.nix  stack.yaml
cli/app/: Main.hs
cli/nix/: sources.json
cli/src/: Cli.hs
