name:                cli
version:             0.0.0
description:         CLI interface for this builder
synopsis:            CLI interface for this builder
author:              Timofey Zakrevskiy
maintainer:          tz@academ.email
copyright:           2018 Timofey Zakrevskiy
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
cabal-version:       1.24

library
  hs-source-dirs:      src
  exposed-modules:     Cli
                       
  ghc-options: -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wmissing-fields
  build-depends:       base
                     
  default-language:    Haskell2010
  

executable ChGKCards
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wmissing-fields
  build-depends:       base
                     , cli
                     , optparse-applicative
                     , typed-process
                     , bytestring
                     , directory

                     
  default-language:    Haskell2010
  

